scripts/bbi/backtrader/v5/README.md
# v5 BBI 强势股轮动策略

## 工作推进记录

- 2026-05-10 14:40 开始设计。目标是开发独立 BBI 强势股轮动策略。
- 2026-05-10 14:43 完成本地结构检查，`v1` 是单股 BBI 金叉/死叉基准。
- 2026-05-10 14:46 完成网络资料检索：趋势跟踪、相对强度、长期均线站上比例和市场宽度是常见强弱判断方法；强弱排序必须用滚动历史窗口，不能用未来收益。
- 2026-05-10 14:52 完成专家设计评审。采纳意见：以 63/126 日站上 BBI 比例为主因子；把大盘、流动性、ST、上市天数作为硬过滤；降低 BBI 距离权重；明确前复权口径残余风险。
- 2026-05-10 14:58 开始开发。创建独立的配置、数据准备、回测、报表脚本。
- 2026-05-10 15:22 首次全量数据准备完成：生成 6,959,397 行面板数据，覆盖 4,457 只股票，区间 2017-2024。
- 2026-05-10 15:24 首轮算法未达目标：最终净值 144,803，年化收益 -16.22%，最大回撤 -77.82%。
- 2026-05-10 15:26 自动进化：加入过热过滤、持仓延续、市场宽度过滤。
- 2026-05-10 15:27 小范围参数测试后确定市场宽度阈值 `MIN_MARKET_BREADTH_63 = 0.45`；当时结果为最终净值 629,419，年化收益 3.34%，最大回撤 -15.38%。
- 2026-05-10 15:31 QA review 发现未复权账本缺少公司行为调整。已用 `adj_factor` 在持仓期间调整股数和成本。
- 2026-05-10 15:32 QA 修复后最终运行：最终净值 640,999，总收益 28.20%，年化收益 3.61%，最大回撤 -15.38%，交易记录 174 条。
- 2026-05-10 晚间按新需求移除上证 BBI 趋势过滤和市场宽度过滤，仅保留短期大跌过滤：近 5 日跌幅 <= -4% 或近 20 日最大回撤 <= -8% 时不新开仓。
- 2026-05-10 晚间调整仓位模型：50 万资金约 10 万/只，单票目标金额封顶 20 万，资金继续扩大时通过增加持仓数量扩容。
- 2026-05-10 晚间加入大盘放量阴线风控：持仓未盈利且上证指数出现放量阴线时，下一交易日开盘卖出。
- 2026-05-10 晚间加入个股跌停强制清仓：持仓股票收盘跌停后，下一交易日开始尝试开盘卖出，卖不出则持续 pending sell。
- 2026-05-10 晚间加入近 1 个月高位过滤：避免买入接近 21 日高点的股票。
- 2026-05-10 晚间加入近期跌停过滤：过去 20 个交易日内出现过收盘跌停的股票不买。
- 2026-05-11 加入游资风格风险过滤：涨停密集、高换手、爆量、龙虎榜频繁出现，命中 2 项及以上不买。
- 2026-05-11 晚间切换为 BBI 长期投资试验版：沿用 BBI 强势排名，等待阶段高点回撤后买入；按 `8 万 + 6 万 + 4 万 + 2 万` 分批建仓；最多持有 5 只，总投入最多 50 万，单票最多 20 万；加入 -5% 硬止损、跌停硬止损、盈利持仓放量大阴线次日卖出。
- 2026-05-12 tmp 实验确认：只合入 `63 日回撤 <= -5%`；不合入 10 周线条件，不合入 ma120 市场门禁。
- 2026-05-12 清理旧计划目录和旧 `MINISHARE` 同步脚本，统一保留当前策略目录。
- 2026-05-12 tmp 实验确认：加仓阈值由整仓浮盈 `3%/6%/10%` 调整为 `5%/10%/15%`，不加入额外时间间隔。
- 2026-05-12 tmp 实验确认：合入强趋势折中方案。普通股票仍需 `63 日回撤 <= -5%`，强趋势股票允许 `63 日回撤 <= -3%`，并可绕过短期过热/近 21 日高点过滤。
- 2026-05-15 tmp 牛熊分策略邻域实验确认：合入不使用 `daily_info` 的 `split_b4_n7_bear0`。牛市普通首买回撤阈值 `-4%`，震荡/熊市普通首买回撤阈值 `-7%`，强趋势首买回撤阈值 `-2.6%`；熊市风控统一表述为“熊市确认后不开仓”和“熊市确认后浮亏卖出”。`daily_info` 成交活跃度增强版实验失败，暂不合入。

## 运行方式

```powershell
cd scripts/bbi/backtrader/v5
python -X utf8 10_prepare_data.py
python -X utf8 20_run_backtest.py
python -X utf8 30_generate_report.py
```

默认口径：`10_prepare_data.py` 从 `START_DATE=2017-01-01` 取数作为指标预热，`20_run_backtest.py` 从 `BACKTEST_START_DATE=2018-01-01` 开始回测；`END_DATE=None` 表示默认跑到当前日期，实际结束日以数据库源表已同步到的最大交易日为准。

## 策略设计

### 目标

通过统计每只股票在最近一段时间内持续站上数据库 BBI 的程度，识别相对强势股，再做组合轮动，并与 `v1` 基准结果对比。

`v5` 是独立策略目录。

### 数据来源

| 用途 | 数据表 | 字段 |
|---|---|---|
| 股票基础池 | `tushare_v2."001_stock_basic"` | `ts_code`, `name`, `list_date`, `delist_date`, `list_status` |
| 日线因子 | `tushare_v2."063_stk_factor_pro"` | `trade_date`, `open`, `high`, `low`, `close`, `pre_close`, `open_qfq`, `close_qfq`, `bbi_qfq`, `amount`, `circ_mv`, `adj_factor`, `turnover_rate`, `volume_ratio` |
| 历史 ST | `tushare_v2."004_stock_st"` | `ts_code`, `trade_date` |
| 停牌 | `tushare_v2."030_suspend_d"` | `ts_code`, `trade_date`, `suspend_type` |
| 涨跌停 | `tushare_v2."029_stk_limit"` | `up_limit`, `down_limit` |
| 龙虎榜 | `tushare_v2."088_top_list"` | `ts_code`, `trade_date` |
| 大盘短期大跌过滤/放量阴线风控 | `tushare_v2."137_idx_factor_pro"` | `000001.SH`, `open`, `close`, `amount` |

BBI 必须直接使用数据库字段，不在本地重新计算。

### 防未来函数规则

交易日 `T` 开盘调仓时，只能使用上一个已经完成交易日 `signal_date` 的数据。

所有强度特征都只使用 `trade_date <= signal_date` 的历史数据。

### 强度特征

对每只股票、每个已完成交易日计算：

- `above_bbi`：`close_qfq > bbi_qfq`
- `bbi_distance`：`close_qfq / bbi_qfq - 1`
- `above_ratio_21`, `above_ratio_63`, `above_ratio_126`
- `avg_distance_21`, `avg_distance_63`
- `ret_21`, `ret_63`, `ret_126`
- `volatility_63`
- `amount_ma20`, `circ_mv_ma20`
- `high_pos_21`：当前收盘价 / 近 21 日最高收盘价
- `high_pos_63`：当前收盘价 / 近 63 日最高收盘价
- `pullback_63`：当前前复权收盘价 / 近 63 日最高前复权收盘价 - 1
- `range_pos_63`：当前收盘价在近 63 日收盘价区间中的位置
- `recent_limit_down_20`：近 20 个交易日收盘跌停次数
- `recent_limit_up_20`, `recent_limit_up_63`：近 20/63 个交易日收盘涨停次数
- `turnover_rate_ma20`, `turnover_rate_max20`：近 20 日平均/最大换手率
- `volume_ratio_max20`：近 20 日最大量比
- `lhb_count_20`：近 20 个交易日上龙虎榜次数
- `hot_money_risk_hits`：游资风格风险命中项数量

### 评分

当前评分公式：

```text
score =
  0.30 * z(above_ratio_63)
+ 0.25 * z(above_ratio_126)
+ 0.15 * z(ret_63)
+ 0.10 * z(avg_distance_63)
- 0.15 * z(volatility_63)
+ 0.05 * z(log(amount_ma20))
```

评分是在每个 `signal_date` 的横截面中计算，只使用当日可见信息。

评分前硬过滤：

- `above_ratio_63 >= 0.55`
- `above_ratio_126 >= 0.50`
- `ret_63 >= 0`
- `ret_21 <= 0.45`，强趋势股票例外
- `avg_distance_63 <= 0.18`
- 排除近 1 个月高位风险：`high_pos_21 < 0.95`，强趋势股票例外
- 排除近期跌停风险：`recent_limit_down_20 == 0`
- 排除游资风格风险：`hot_money_risk_hits < 2`
- 当日 `is_eligible = True`
- 大盘短期大跌过滤未触发

强趋势股票定义：

- `above_ratio_63 >= 0.80`
- `above_ratio_126 >= 0.60`
- `ret_63 >= 0.80`
- `recent_limit_down_20 == 0`
- `hot_money_risk_hits < 2`

首笔买入回撤要求：

- 普通股票：`pullback_63 <= -0.05`
- 强趋势股票：`pullback_63 <= -0.03`

启用市场状态后，首笔买入回撤要求按 `signal_date` 的市场状态动态调整：

- 牛市：普通股票 `pullback_63 <= -0.04`，强趋势股票 `pullback_63 <= -0.026`
- 震荡：普通股票 `pullback_63 <= -0.07`，强趋势股票 `pullback_63 <= -0.026`
- 熊市确认后不开仓：上一交易日收盘后市场状态为熊市，则当前交易日开盘不新开仓
- 熊市确认后浮亏卖出：此前已确认熊市，且持仓按上一交易日收盘价计算仍为浮亏或不盈利，则当前交易日开盘卖出；盈利持仓继续持有

市场状态只使用 `signal_date` 及之前的数据：

- 熊市：上证指数距 252 日高点回撤 `<= -20%`，或上证收盘低于 120 日均线、120 日均线 20 日斜率为负、可交易股票池 BBI 宽度 `< 45%`
- 牛市：上证收盘高于 120/200 日均线、120 日均线 20 日斜率为正、252 日回撤 `> -10%`、可交易股票池 BBI 宽度 `>= 55%`
- 其他为震荡；预热不足在日志中记为 `unknown`，交易阈值按震荡处理
- 股票池使用 PIT 口径：纳入回测区间内曾经上市且未在回测开始前退市的股票；市场宽度基于该 PIT 可交易池计算。

游资风格风险命中项：

- 近 20 日收盘涨停次数 `>= 2`
- 近 63 日收盘涨停次数 `>= 3`
- 近 20 日平均换手率 `>= 10%`
- 近 20 日最大换手率 `>= 20%`
- 近 20 日最大量比 `>= 3`
- 近 20 日上龙虎榜次数 `>= 2`

这些阈值是工程过滤参数，不是权威公式；它们用于剔除短线异动过强、接力风险偏高的股票。

### 组合规则

- 每月第一个实际交易日开盘调仓。
- 使用上一个交易日作为 `signal_date`。
- 如果 `signal_date` 近 5 日跌幅 <= -4%，则本次不新开仓。
- 如果 `signal_date` 近 20 日最大回撤 <= -8%，则本次不新开仓。
- 短期大跌过滤只阻止新开仓，不强制卖出现有持仓。
- 每个交易日开盘前，用上一完整交易日判断大盘风险：上证指数收阴、单日跌幅 <= -0.7%、成交额 >= 前 20 日均成交额 * 1.2、近 5 日涨跌幅 <= 0。
- 如果大盘风险触发，且某个持仓按上一完整交易日收盘价计算未盈利，则该持仓在当前交易日开盘卖出。
- 大盘放量阴线风控只卖出未盈利持仓，不卖盈利持仓；当天因该风控卖出的股票不会在同一天被调仓逻辑买回。
- 持仓股票如果上一完整交易日收盘跌停，则当前交易日开盘强制尝试卖出；如果停牌、缺行情或开盘仍跌停，则保留为 pending sell，后续交易日继续尝试。
- 过滤通过后，按评分从高到低补齐目标持仓数量。
- 开盘价成交。
- 已有持仓如果仍在 Top `KEEP_TOP_N` 内，则继续持有，减少换手。
- 仓位按资金动态计算：单票目标金额不低于约 10 万，封顶 20 万；50 万资金约持有 5 只，资金扩大后通过增加持仓数量扩容。
- 买入日如果开盘涨停、停牌、缺开盘价，则跳过。
- 卖出日如果开盘跌停、停牌、缺开盘价，则保留为 pending sell，后续交易日继续尝试卖出。
- 持仓期间如 `adj_factor` 变化，会先调整股数和成本，再估值或卖出。

### 股票过滤

- PIT 基础池：纳入回测区间内曾经上市且未在回测开始前退市的股票，排除北交所和科创板；不再用当前 `list_status`、当前 `delist_date IS NULL` 或当前名称里的 ST/退 做历史过滤。
- 每日动态过滤：交易日处于上市至退市日期之间、上市满 365 天、历史当日非 ST、未停牌、`amount_ma20 >= 30,000`、`circ_mv_ma20 >= 100,000`。
- 单位沿用现有项目口径：`amount` 为千元，`circ_mv` 为万元。

### 输出文件

- `output/stock_list.csv`
- `output/panel.parquet`
- `output/market_index.parquet`
- `output/strength_scores.csv`
- `output/rebalance_log.csv`
- `output/trade_records.csv`
- `output/nav_series.csv`
- `output/summary.json`
- `output/compare_v1.csv`
- `output/report.html`

## 设计与代码评审

专家角色结论：

- 策略设计专家：持续站上 BBI 的比例，比单日 BBI 金叉更适合寻找中长期强势股。
- 数据 QA：必须使用数据库 BBI，并且调仓只能使用前一完整交易日数据；评分不能使用未来实际收益。
- 执行评审：月频轮动比高频追涨更贴近“找周期强势股”的目标。
- 回测 QA：未发现现金重复扣减、买卖方向反、市场过滤未来函数等致命错误；发现未复权成交账本需要 `adj_factor` 调整，已修复。

已知风险：

- 股票池已改为 PIT 口径，降低当前幸存者偏差；仍需依赖源表退市日期、历史 ST、停牌和行情数据完整性。
- `close_qfq` 和 `bbi_qfq` 来自数据库因子字段，和现有 BBI 工作流保持一致；严格点时复权仍需要后续专项审计。
- 下方历史结果是 2018-2024 单区间测试留档，后续以最新输出目录中的 `summary.json` 和 `report.html` 为准；下一轮应做 walk-forward 或滚动分段验证，防止参数过拟合。

## 最终结果

历史留档区间：2018-01-02 到 2024-12-31。

| 指标 | v5 |
|---|---:|
| 初始资金 | 500,000 |
| 最终净值 | 640,999 |
| 总收益 | 28.20% |
| 年化收益 | 3.61% |
| 最大回撤 | -15.38% |
| Calmar | 0.235 |
| 交易记录数 | 174 |
| 短期大跌过滤空仓调仓日 | 以最新回测输出 `summary.json` 为准 |

与 `v1` 对比：

- `v1` 单股回测中位数年化收益：-1.00%，中位数 Calmar：-0.0198。
- `v5` 组合年化收益：3.61%，Calmar：0.2348。
- `v1` 全历史 Calmar Top10 是事后赢家统计，不是可交易组合，只能作为参考，不能作为真实基准。
